name = "argtoml"
version = "0.0.6"
url = "https://github.com/JJJHolscher/argtoml"
abstract = ""
license = "MIT"

[[authors]]
name = "Jochem Hölscher"
github = "JJJHolscher"
email = "jonoDASHdevDOTSIXpsuoATsimpleloginDOTcom"

[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.jupytext]
formats = "ipynb,py"

[tool.pyright]
exclude = ".venv"
venvPath = "."
venv = ".venv"
